Fixed page vertical overflow on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -29,7 +29,7 @@
 
 body {
   width: 100%;
-  min-height: 100vh;
+  height: 100vh;
   font-family: 'Inter',  sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
